--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,12 @@
-# build output
+# Astro build output
 dist/
-# generated types
 .astro/
 
-# dependencies
+# pdfjs worker (copied at build time)
+public/pdf.worker.min.mjs
+
+# Node
 node_modules/
 
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
+# OS
 .DS_Store
-
-# jetbrains setting folder
-.idea/
