--- a/.github/workflows/compile-resume.yml
+++ b/.github/workflows/compile-resume.yml
@@ -17,7 +17,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          # Full history so the commit push includes all prior versions
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -29,55 +28,22 @@ jobs:
           latexmk_use_xelatex: true
           args: -xelatex -file-line-error -halt-on-error -interaction=nonstopmode
 
-      # latex/resume.pdf now exists after compilation
       - name: Name, store, and update versions manifest
         run: |
           set -euo pipefail
-
-          MONTH=$(date +'%b')    # Feb
-          YEAR=$(date  +'%y')    # 26
+          MONTH=$(date +'%b')
+          YEAR=$(date +'%y')
           FILENAME="JakobLangtry${MONTH}${YEAR}.pdf"
-
           mkdir -p public/resumes
-
-          echo "Copying latex/resume.pdf → public/resumes/${FILENAME}"
+          echo "Copying latex/resume.pdf -> public/resumes/${FILENAME}"
           cp latex/resume.pdf "public/resumes/${FILENAME}"
-
-          # Regenerate versions.json — sort chronologically, newest first
-          python3 - <<'PYEOF'
-import os, json, re
-
-MONTHS = {
-    'Jan':1,'Feb':2,'Mar':3,'Apr':4,'May':5,'Jun':6,
-    'Jul':7,'Aug':8,'Sep':9,'Oct':10,'Nov':11,'Dec':12
-}
-
-pattern = re.compile(r'^JakobLangtry([A-Z][a-z]{2})(\d{2})\.pdf$')
-entries = []
-
-for fname in sorted(os.listdir('public/resumes')):
-    m = pattern.match(fname)
-    if m:
-        mon, yr = m.group(1), m.group(2)
-        sort_key = (int(yr) + 2000) * 100 + MONTHS.get(mon, 0)
-        entries.append({'filename': fname, 'label': f"{mon} '{yr}", 'sort_key': sort_key})
-
-entries.sort(key=lambda x: x['sort_key'], reverse=True)
-versions = [{'filename': e['filename'], 'label': e['label']} for e in entries]
-manifest = {'latest': versions[0]['filename'] if versions else '', 'versions': versions}
-
-with open('public/resumes/versions.json', 'w') as f:
-    json.dump(manifest, f, indent=2)
-
-print(f"versions.json updated — {len(versions)} version(s), latest: {manifest['latest']}")
-PYEOF
+          python3 .github/scripts/update_versions.py
 
       - name: Commit and push
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/resumes/
-          # No-op if nothing changed (same month, identical PDF)
           git diff --staged --quiet && echo "No changes to commit." && exit 0
           git commit -m "resume: $(date +'%b %Y') [skip ci]"
           git push
