--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "astro": "^5.17.1",
     "pdfjs-dist": "^5.4.624"
   },
+  "engines": {
+    "node": ">=20.0.0"
+  },
   "pnpm": {
     "onlyBuiltDependencies": [
       "esbuild",
