--- a/.github/workflows/compile-resume.yml
+++ b/.github/workflows/compile-resume.yml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   compile:
     runs-on: ubuntu-latest
+    if: github.actor != 'github-actions[bot]'
 
     steps:
       - name: Checkout repository
@@ -56,5 +57,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add public/resumes/
           git diff --staged --quiet && echo "No changes to commit." && exit 0
-          git commit -m "resume: $(date +'%b %Y') [skip ci]"
+          git commit -m "resume: $(date +'%b %Y')"
           git push
