--- a/.github/workflows/compile-resume.yml
+++ b/.github/workflows/compile-resume.yml
@@ -22,6 +22,14 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Install Times New Roman font
+        run: |
+          sudo apt-get update
+          echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | sudo debconf-set-selections
+          sudo apt-get install -y --no-install-recommends fontconfig ttf-mscorefonts-installer
+          fc-cache -f -v
+          fc-list | rg -i "Times New Roman"
+
       - name: Compile LaTeX
         uses: xu-cheng/latex-action@v3
         with:
