--- a/.github/workflows/compile-resume.yml
+++ b/.github/workflows/compile-resume.yml
@@ -28,7 +28,7 @@ jobs:
           echo "ttf-mscorefonts-installer msttcorefonts/accepted-mscorefonts-eula select true" | sudo debconf-set-selections
           sudo apt-get install -y --no-install-recommends fontconfig ttf-mscorefonts-installer
           fc-cache -f -v
-          fc-list | rg -i "Times New Roman"
+          fc-list | grep -i "Times New Roman"
 
       - name: Compile LaTeX
         uses: xu-cheng/latex-action@v3
